--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ serde_json = "1.0"
 reqwest = "0.8.8"
 syntect = "2.1"
 gdk = "0.8.0"
+static_map = "0.1.1"
+static_map_macros = "0.1.1"
 
 [dependencies.gtk]
 version = "0.4.1"
