--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ build = "build.rs"
 
 [dependencies]
 gio = "0.4.1"
+serde = "1.0"
 serde_json = "1.0"
+serde_derive = "1.0"
 reqwest = "0.8.8"
 syntect = "2.1"
 gdk = "0.8.0"
