--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,33 @@
 [package]
 name = "web_api_client"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["kykc"]
 build = "build.rs"
+license = "MIT"
+description = "Simple HTTP client with GTK UI written in Rust"
 
 [dependencies]
-gio = "0.4.1"
-serde = "1.0"
-serde_json = "1.0"
-serde_derive = "1.0"
-reqwest = "0.8.8"
-syntect = "2.1"
-gdk = "0.8.0"
-static_map = "0.1.1"
-static_map_macros = "0.1.1"
-libxml = "0.2.2"
+gio = "^0.5"
+gdk = "^0.9"
+serde = "^1.0"
+serde_derive = "^1.0"
+reqwest = "^0.8"
+syntect = "^2.1"
+static_map = "^0.1"
+static_map_macros = "^0.1"
+libxml = "^0.2"
 
 [dependencies.gtk]
-version = "0.4.1"
+version = "^0.5"
 features = ["v3_20"]
+
+[dependencies.serde_json]
+version = "^1.0"
+features = ["preserve_order"]
+
+[package.metadata.deb]
+assets = [
+    ["target/release/web_api_client", "usr/bin/auweb", "755"],
+    ["assets/auweb.desktop", "usr/share/applications/", "644"],
+    ["assets/auweb.png", "usr/share/icons/", "644"]
+]
